
[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_grouped_packages,_and_multiple_vulnerabilities - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_and_multiple_vulnerabilities - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_no_vulnerabilities - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
                <h3>Source: npm: :path/to/my/second/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
                <h3>Source: npm: :path/to/my/third/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages,_some_vulnerabilities - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_a_mixed_count_of_packages_across_ecosystems,_and_multiple_vulnerabilities,_but_some_uncalled - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/multiple_sources_with_no_packages - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2></h2>
            <div class="artifact-section">
                
                <h3>Source: : :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
                <h3>Source: : :path/to/my/second/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
                <h3>Source: : :path/to/my/third/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/no_sources - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_no_packages - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2></h2>
            <div class="artifact-section">
                
                <h3>Source: : :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package,_no_vulnerabilities - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package,_one_uncalled_vulnerability,_and_one_called_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 1 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-468"
    onclick="showVulnDetails('OSV-1-0-468')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-468" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                <details class="uncalled">
                    <summary>Show/Hide Uncalled vulnerabilities</summary>
                    <div id="uncalled-details-:path/to/my/first/lockfile">
                        <h4>Uncalled vulnerabilities</h4>
                        <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                        <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-GHSA-123-0-446"
    onclick="showVulnDetails('GHSA-123-0-446')">
    <td><a href="https://osv.dev/GHSA-123">GHSA-123</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-GHSA-123-0-446" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
                    </div>
                </details>
                
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_one_called_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 1 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-485"
    onclick="showVulnDetails('OSV-1-0-485')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-485" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_one_uncalled_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                <details class="uncalled">
                    <summary>Show/Hide Uncalled vulnerabilities</summary>
                    <div id="uncalled-details-:path/to/my/first/lockfile">
                        <h4>Uncalled vulnerabilities</h4>
                        <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                        <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-240"
    onclick="showVulnDetails('OSV-1-0-240')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-240" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
                    </div>
                </details>
                
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 1 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-449"
    onclick="showVulnDetails('OSV-1-0-449')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-449" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_one_vulnerability_(dev) - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 1 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-92"
    onclick="showVulnDetails('OSV-1-0-92')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-92" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_uncalled_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 0 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                <details class="uncalled">
                    <summary>Show/Hide Uncalled vulnerabilities</summary>
                    <div id="uncalled-details-:path/to/my/first/lockfile">
                        <h4>Uncalled vulnerabilities</h4>
                        <p>Found 1 package(s) with issues, 2 known vulnerabilities found.</p>
                        <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-186"
    onclick="showVulnDetails('OSV-1-0-186')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-186" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-GHSA-123-1-199"
    onclick="showVulnDetails('GHSA-123-1-199')">
    <td><a href="https://osv.dev/GHSA-123">GHSA-123</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-GHSA-123-1-199" class="vuln-details">
        
        
          <p>Aliases: OSV-1</p>
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
                    </div>
                </details>
                
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_one_package_and_two_aliases_of_a_single_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 2 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 2 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-985"
    onclick="showVulnDetails('OSV-1-0-985')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-985" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-GHSA-123-1-103"
    onclick="showVulnDetails('GHSA-123-1-103')">
    <td><a href="https://osv.dev/GHSA-123">GHSA-123</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-GHSA-123-1-103" class="vuln-details">
        
        
          <p>Aliases: OSV-1</p>
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/one_source_with_vulnerabilities,_some_missing_content - 1]

---

[TestPrintHTMLResults_WithVulnerabilities/two_sources_with_packages,_one_vulnerability - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 1 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-926"
    onclick="showVulnDetails('OSV-1-0-926')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-926" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
                <h3>Source: npm: :path/to/my/second/lockfile</h3>
                
                <p>Found 0 package(s) with issues, 0 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---

[TestPrintHTMLResults_WithVulnerabilities/two_sources_with_the_same_vulnerable_package - 1]
<!DOCTYPE html>
<html>

<head>
    <title>Vulnerability Scan Report</title>
    <style>
        body {
            font-family: sans-serif;
            margin: 0;
            padding: 0;
            background-color: #f4f4f4;
            color: #333;
            overflow-y: scroll;
        }

        a {
            color: inherit;
        }

        .container {
            width: 1000px;
            margin: 20px auto;
            background-color: #fff;
            padding: 20px;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
        }

        h1 {
            text-align: center;
        }

        h2 {
            margin-top: 10px;
        }

        h1,
        h2,
        h3 {
            color: #333;
        }

        .ecosystem {
            margin-bottom: 20px;
        }

        .vulnerability {
            /* border-top: 1px solid #ddd; */
            /* margin-top: 20px; */
            padding: 5px;
            border-radius: 3px;
        }

        .severity {
            font-weight: bold;
        }

        .high {
            color: #d9534f;
            /* Red for High severity */
        }

        .medium {
            color: #f0ad4e;
            /* Orange for Medium severity */
        }

        details summary {
            cursor: pointer;
            /* font-weight: bold; */
        }

        details p {
            /* margin-top: 2px; */
            /* color: gray; */
            margin-left: 10px;
        }

        header {
            display: flex;
            align-items: center;
            margin-bottom: 20px;
            position: relative;
            justify-content: space-evenly;
        }

        .logo {
            height: 50px;
            position: absolute;
            left: 0;
        }

        .vuln-table {
            width: 100%;
            text-align: center;
            border-radius: 5px;
            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
            margin-bottom: 40px;
            margin-top: 10px;
        }

        .vuln-table td {
            width: 200px;
        }

        .vuln-table th {
            border-bottom: 1px solid #DDD;
        }

        .vuln-tr {
            cursor: pointer;
            line-height: 30px;
        }

        .vuln-tr td {
            border-bottom: 1px solid #eee;
        }

        .vuln-tr:hover {
            background-color: #eee
        }


        .vuln-id {
            color: #d9534f;
        }

        .vuln-details {
            text-align: left;
            padding: 0 50px;
            display: none;
        }

        .vuln-details {
            border-bottom: 1px solid #eee;
        }

        #vuln-filter {
            margin-top: 20px;
        }

        .artifact-section {
            margin-bottom: 30px;
        }

        .uncalled {
            margin-bottom: 20px
        }

        .warning {
            color: #c5221f
        }

    </style>
</head>

<body>
    <script>
        function showVulnDetails(detailsId) {
            var detailsElement = document.getElementById("vuln-details-" + detailsId);
            var rowElement = document.getElementById("vuln-tr-" + detailsId)
            if (detailsElement.style.display !== "block") {
                detailsElement.style.display = "block";
                rowElement.style.backgroundColor = "#ddd"
            } else {
                detailsElement.style.display = "none";
                rowElement.style.backgroundColor = "#fff"
            }
        }
    </script>
    <div class="container">
        <header>
            <img src="https://google.github.io/osv.dev/assets/logo.png" alt="OSV-Scanner Logo" class="logo">
            <h1>Vulnerability Scan Report</h1>
        </header>
        <h2>Scanning Results</h2>
        <p>Total 2 vulnerabilities found.</p>
        
        <div class="ecosystem">
            <h2>npm</h2>
            <div class="artifact-section">
                
                <h3>Source: npm: :path/to/my/first/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-528"
    onclick="showVulnDetails('OSV-1-0-528')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-528" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
                <h3>Source: npm: :path/to/my/second/lockfile</h3>
                
                <p>Found 1 package(s) with issues, 1 known vulnerabilities found.</p>
                <table class="vuln-table">
  <tr>
    <th>ID</th>
    <th>package</th>
    <th>Installed version</th>
    <th>Fixed version</th>
    <th>Severity</th>
  </tr>
  
  
  <tr class='vuln-tr' id="vuln-tr-OSV-1-0-529"
    onclick="showVulnDetails('OSV-1-0-529')">
    <td><a href="https://osv.dev/OSV-1">OSV-1</a></td>
    <td>mine1</td>
    <td>1.2.3</td>
    <td  class="warning" >No fix available</td>
    <td>UNKNOWN (-1.0)</td>
  </tr>
  <tr>
    <td colspan="100%">
      <div id="vuln-details-OSV-1-0-529" class="vuln-details">
        
        
        
        
        
      </div>
    </td>
  </tr>
  
</table>
       
                
                
            </div>
        </div>
        
    </div>
</body>

</html>
---
